# ActiveFanController

./: .gitignore  CMakeLists.txt  README.md  build.sh  make_and_build.sh
app/: CMakeLists.txt  fan_controller.cpp
etc/: afc
lib/: CMakeLists.txt
lib/config/: CMakeLists.txt
lib/config/inc/: config.hpp
lib/config/src/: config.cpp
lib/fan/: CMakeLists.txt
lib/fan/inc/: fan.hpp
lib/fan/src/: fan.cpp
lib/file/: CMakeLists.txt
lib/file/inc/: file_util.hpp
lib/file/src/: file_util.cpp
lib/nlohmann/: CMakeLists.txt
lib/pwm/: CMakeLists.txt
lib/pwm/inc/: pwm.hpp
lib/pwm/src/: pwm.cpp
lib/thermal/: CMakeLists.txt
lib/thermal/inc/: thermal.hpp
lib/thermal/src/: thermal.cpp
src/: CmakeLists.txt  fan_controller.cpp
src/config/: CMakeLists.txt  config.cpp  config.hpp
src/fan/: CMakeLists.txt  fan.cpp  fan.hpp
src/nlohmann/: CMakeLists.txt
src/pwm/: CMakeLists.txt  pwm.cpp  pwm.hpp
src/thermal/: CMakeLists.txt  thermal.cpp  thermal.hpp
systemd/: afc.service
